# Generic-RustBackend

./: Cargo.toml  README.md  config.toml
src/: config.rs  main.rs
src/exchanges/: binance.rs  binance_ws.rs  huobi_rest_api.rs  kraken_rest_api.rs  mod.rs  orderbook_provider.rs
src/rest/: mod.rs  orderbook_response.rs
src/websocket/: mod.rs  websocket_handler.rs
