[package]
name = "FlowDesk"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = { version =  "0.26.2", features = ["native-tls"] }
futures-util = "0.3.31"
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
http = "1.3.1"
